static/css/master.css
#top {
	padding-top: 2rem;
	display: block;
}

.rule {
	padding: .5rem 1rem;
	border-bottom: 1px solid #eee;
	color: #999;
	line-height: 1.5rem;
}

.tweet {
	border-bottom: 1px solid #ddd;
	clear: both;
	padding: .5rem;
}

.mention {
	background: #f0f0f0;
}

.icon {
	float: left;
	margin-right: .5rem;
	padding: 0.25rem;
	border: 1px solid #ececec;
}

.text {
	margin: .25rem .25rem .25rem 4rem;
	white-space: pre-wrap;
}

.text a {
	color: #3ac;
}

.meta {
	margin: .25rem;
}

.tweet, nav {
	font-size: .75rem;
}

.name, #title {
	font-weight: bold;
}

.actions, .screen_name, .timestamp {
	font-size: .625rem;
}

.screen_name, .timestamp {
	color: #999;
}

nav {
	position: fixed;
	top: 0;
	width: 100%;
}

nav ul {
	padding: 0;
	background: #3ac;
	color: #fff;
	margin: 0;
}

nav ul li {
	display: inline-block;
	height: 2rem;
	line-height: 2rem;
	padding: 0 1rem;
}

.flashes {
	margin: 0;
	padding: 0;
}

.flashes li {
	background: #333;
	height: 2rem;
	line-height: 2rem;
	color: #fff;
	padding: 0 .875rem;
	font-size: .875rem;
}

.timestamp a {
	color: #999;
}

.actions a {
	color: #000;
}

nav ul li a {
	color: #fff;
}

#title {
	background: #3e7ab5;
}

#title a {
	text-decoration: none;
}

#more {
	margin: .5rem;
	padding: .5rem;
	background: #6aa;
}

#more a {
	color: #fff;
}

